[package]
name = "hello-eframe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.18.0", features = ["default_fonts"] }
poll-promise = { version = "0.1", features = ["tokio"] }
tokio = { version = "1.20.1", features = ["full"] }
